Fixed image styling on mobile for blog posts

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -37,7 +37,7 @@
     }
 
     .blogpost img {
-        max-width: 375px;
+        max-width: 315px;
     }
 
     #blogAlignment {
